--- a/css/style.css
+++ b/css/style.css
@@ -474,6 +474,7 @@ img {
 
 .tag-new {
   position: absolute;
+  z-index: 1;
   top: 0;
   right: 0;
   width: 99px;
@@ -492,7 +493,7 @@ img {
 /* Offers */
 
 .offers {
-  margin-bottom: 60px;
+  margin-bottom: 59px;
 }
 
 .offers-list {
@@ -695,6 +696,9 @@ img {
 .popular-brand-item,
 .catalog-item {
   position: relative;
+  display: flex;
+  padding-top: 5px;
+  padding-bottom: 21px;
   background-color: var(--basic-white);
   border: 1px solid var(--basic-lighter-grey);
   overflow: hidden;
@@ -721,13 +725,14 @@ img {
 }
 
 .popular-brand-link {
+  position: relative;
   display: block;
   width: 100%;
   height: 100%;
 }
 
 .popular-brand-logo {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -735,16 +740,18 @@ img {
 
 .popular-item-card,
 .catalog-item-card {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
   margin: 0;
-  text-align: center;
 }
 
 .popular-item-image,
 .catalog-item-image {
+  order: -1;
   width: 220px;
   height: 165px;
   margin: 0;
-  margin-top: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -755,10 +762,16 @@ img {
   font-size: 18px;
   line-height: 20px;
   text-align: center;
-  margin: 10px 30px;
+  margin: 7px 17px;
 }
 
-.price-container {
+.popular-item-name,
+.catalog-item-name {
+  display: block;
+}
+
+.popular-item-price,
+.catalog-item-price {
   font-weight: 700;
   font-size: 17px;
   line-height: 18px;
@@ -768,22 +781,57 @@ img {
 
 .popular-item-old-price,
 .catalog-item-old-price {
+  margin: 0;
+  margin-bottom: 13px;
   text-decoration: line-through;
   color: var(--basic-darker-grey);
 }
 
 .popular-item-button,
 .catalog-item-button {
+  position: relative;
+  margin-left: 43px;
+  margin-right: 34px;
+  margin-top: auto;
+  padding: 10px;
+  border-radius: 3px;
   color: var(--basic-white);
   background-color: var(--basic-red);
 }
 
+.popular-item-button::before,
+.catalog-item-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 38px;
+  height: 38px;
+  background-image:
+    linear-gradient(225deg, var(--basic-white) 25%, transparent 25%),
+    linear-gradient(-45deg, var(--basic-white) 25%, transparent 25%);
+}
+
 .popular-item-options,
 .catalog-item-options {
-  background-color: var(--basic-white);
-  padding: 37px 42px;
+  position: absolute;
+  width: 220px;
+  padding-top: 33px;
+  padding-right: 44px;
+  padding-bottom: 47px;
+  padding-left: 41px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  background-color: var(--basic-white);
+  visibility: hidden;
+}
+
+.popular-item:hover .popular-item-options,
+.popular-item:focus .popular-item-options,
+.catalog-item:hover .catalog-item-options,
+.catalog-item:focus .catalog-item-options {
+  visibility: visible;
 }
 
 .popular-item-options a,
@@ -796,9 +844,27 @@ img {
 }
 
 .option-buy {
+  position: relative;
+  margin-bottom: 10px;
+  padding: 10px;
+  padding-left: 24px;
+  border-radius: 2px;
   color: var(--basic-white);
   background-color: var(--basic-green);
-  margin-bottom: 10px;
+  box-shadow: inset 0 -3px 0 var(--basic-darker-green);
+}
+
+.option-buy::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 30px;
+  width: 15px;
+  height: 15px;
+  background-image: url(../img/icon-cart.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.3;
 }
 
 .option-buy:hover,
@@ -811,8 +877,10 @@ img {
 }
 
 .option-bookmark {
-  color: var(--basic-dark-greyblue);
+  padding: 8px 10px 6px;
+  border-radius: 2px;
   border: 3px solid var(--basic-green);
+  color: var(--basic-dark-greyblue);
 }
 
 .option-bookmark:hover,
