Завершена стилизация сортировки
Стрелочки добавлены через юникод. Можно ли так делтать? Часто ли на практике применяется юникод?

--- a/css/style.css
+++ b/css/style.css
@@ -1397,6 +1397,14 @@ img {
   justify-content: space-between;
 }
 
+.sort-links {
+  width: 354px;
+}
+
+.sort-links-arrows {
+  width: 43px;
+}
+
 .sort-link {
   line-height: 18px;
   text-transform: uppercase;
