--- a/css/style.css
+++ b/css/style.css
@@ -752,24 +752,30 @@ img {
 .offers-slider-controls {
   position: absolute;
   left: 50%;
-  bottom: 36px;
-  line-height: 10px;
+  bottom: 31px;
+  max-width: 150px;
   -webkit-transform: translate(-50%);
   -ms-transform: translate(-50%);
   transform: translate(-50%);
   display: flex;
-  width: 30px;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .offers-control-button {
-  padding: 0;
   width: 10px;
   height: 10px;
+  padding: 0;
+  margin-right: 10px;
+  margin-bottom: 5px;
   background-color: var(--basic-white);
   border: 2px solid var(--basic-white);
   border-radius: 50%;
   cursor: pointer;
+}
+
+.offers-control-button:last-child {
+  margin-right: 0;
 }
 
 .offers-slider-controls .current {
