--- a/css/style.css
+++ b/css/style.css
@@ -1572,20 +1572,26 @@ img {
 .footer-promo-links {
   list-style: none;
   padding: 0;
+  margin-left: -59px;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 .footer-navigation-links {
-  width: 546px;
+  width: 612px;
   margin-top: 37px;
   margin-bottom: 7px;
 }
 
 .footer-promo-links {
-  width: 523px;
+  width: 582px;
   margin: 0;
   margin-top: 27px;
+}
+
+.footer-navigation-links li, .footer-promo-links li {
+  margin-left: 59px;
 }
 
 .footer-navigation-links a {
