--- a/css/style.css
+++ b/css/style.css
@@ -882,6 +882,7 @@ img {
 
 .popular-item-card,
 .catalog-item-card {
+  position: relative;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
@@ -1317,6 +1318,7 @@ img {
   grid-template-columns: 220px 220px 220px;
   column-gap: 20px;
   row-gap: 17px;
+  margin-bottom: 46px;
 }
 
 /* Breadcrumbs */
@@ -1456,13 +1458,11 @@ img {
 /* Pagination */
 
 .pagination-list {
-  display: flex;
-  flex-wrap: wrap;
+  list-style: none;
   padding: 0;
   margin: 0;
-  margin-top: 29px;
-  list-style: none;
-  grid-column: 1 / -1;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .pagination-item:not(:last-child) {
